--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
 }
 .banner {
   padding: 100px 0;
-  background-image: url("assets/hero-bg.png");
+  background-image: url("./assets/hero-bg.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -58,7 +58,7 @@
   position: absolute;
   width: 18vw;
   height: 18vw;
-  background-image: url("assets/hero-circle.png");
+  background-image: url("./assets/hero-circle.png");
   background-position: center;
   background-size: cover;
   display: flex;
